# quizmaster-spec

./: .gitignore  CLAUDE.md  README.md
.specify/memory/: constitution.md
backend/: pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/api/: attempt.py  auth.py  dependencies.py  quiz.py  scoreboard.py
backend/src/db/: __init__.py
backend/src/db/migrations/: 001_add_user_scores.sql  001_create_quizzes.sql  002_create_questions.sql  003_create_answers.sql  004_create_quiz_attempts.sql  005_create_attempt_answers.sql  006_create_users.sql  007_create_sessions.sql  008_create_login_attempts.sql  009_create_password_resets.sql
backend/src/middleware/: session.py
backend/src/models/: __init__.py  answer.py  attempt.py  attempt_answer.py  login_attempt.py  password_reset.py  question.py  quiz.py  session.py  user.py  user_score.py
backend/src/schemas/: __init__.py  attempt.py  auth.py  quiz.py  scoreboard.py
backend/src/security/: __init__.py  password.py  tokens.py
backend/src/services/: attempt.py  auth.py  email.py  quiz.py  scoreboard.py  user.py
backend/tests/: conftest.py
backend/tests/contract/: test_attempt_api.py  test_auth_api.py  test_quiz_api.py  test_scoreboard_api.py
backend/tests/integration/: test_quiz_crud.py  test_quiz_taking.py  test_scoreboard.py
backend/tests/unit/: test_attempt_service.py  test_auth_service.py  test_password.py  test_quiz_service.py  test_scoreboard_service.py
frontend/templates/: attempt_history.html  base.html  forgot_password.html  login.html  profile.html  quiz_browser.html  (+8 more)
(+45 files in other folders)
